--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -78,6 +78,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>$(SolutionDir)Extension;$(SolutionDir)Extension\Live2D\Framework\src;$(SolutionDir)Extension\Live2D\Core\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -112,6 +113,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>$(SolutionDir)Extension;$(SolutionDir)Extension\Live2D\Framework\src;$(SolutionDir)Extension\Live2D\Core\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -142,6 +144,8 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="D2DRenderer.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Live2DAllocater.h" />
+    <ClInclude Include="Live2DModel.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Singleton.h" />
   </ItemGroup>
@@ -149,6 +153,8 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="D2DRenderer.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Live2DAllocater.cpp" />
+    <ClCompile Include="Live2DModel.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
